New version: TensorAlgebra v0.1.8
UUID: 68bd88dc-f39d-4e12-b2ca-f046b68fcc6a
Repo:
Tree: ed7e0c9666f1e3730013b543d8ebba6f2b0b30f9

--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "0a86c95421f9df78d5e6fbadf9a931ee1b606c37"
 
 ["0.1.7"]
 git-tree-sha1 = "8e2d6d893b476ea3fc50324dba18f9dd5831f883"
+
+["0.1.8"]
+git-tree-sha1 = "ed7e0c9666f1e3730013b543d8ebba6f2b0b30f9"
