--- a/T/TensorAlgebra/Compat.toml
+++ b/T/TensorAlgebra/Compat.toml
@@ -6,5 +6,8 @@ LinearAlgebra = "1.10.0 - 1"
 TupleTools = "1.6.0 - 1"
 julia = "1.10.0 - 1"
 
-["0.1.1 - 0"]
+["0.1.1 - 0.1.7"]
 TypeParameterAccessors = "0.2.1 - 0.2"
+
+["0.1.8 - 0"]
+TypeParameterAccessors = "0.2.1 - 0.3"
