--- a/U/UnallocatedArrays/Compat.toml
+++ b/U/UnallocatedArrays/Compat.toml
@@ -7,5 +7,8 @@ julia = "1.10.0 - 1"
 ["0 - 0.1.0"]
 TypeParameterAccessors = "0.1"
 
-["0.1.1 - 0"]
+["0.1.1 - 0.1.2"]
 TypeParameterAccessors = "0.2.1 - 0.2"
+
+["0.1.3 - 0"]
+TypeParameterAccessors = "0.2.1 - 0.3"
