--- a/U/UnallocatedArrays/Versions.toml
+++ b/U/UnallocatedArrays/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "dbdd4482c0762283bf535728cf8a46621b2374a3"
 
 ["0.1.2"]
 git-tree-sha1 = "94b65c1a93ed6e575c8f5a57b942f1c71eaa43eb"
+
+["0.1.3"]
+git-tree-sha1 = "1caebe23ddbbca8a36a878c29bcaaebc106bba9b"
