--- a/D/DerivableInterfaces/Compat.toml
+++ b/D/DerivableInterfaces/Compat.toml
@@ -7,5 +7,8 @@ MLStyle = "0.4.17 - 0.4"
 MapBroadcast = "0.1.5 - 0.1"
 julia = "1.10.0 - 1"
 
-["0.3.12 - 0"]
+["0.3.12 - 0.3.14"]
 TypeParameterAccessors = "0.2"
+
+["0.3.15 - 0"]
+TypeParameterAccessors = "0.2 - 0.3"
