New version: BlockSparseArrays v0.2.15
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: fa3b838840275e3504b5f272fb438f7d76389a82

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "f935221d5d93c9392737706cca2cf6121cde83a1"
 
 ["0.2.14"]
 git-tree-sha1 = "b5bc6fa01fa5afb7d7886559544cc2c15e5abd4d"
+
+["0.2.15"]
+git-tree-sha1 = "fa3b838840275e3504b5f272fb438f7d76389a82"
