--- a/B/BlockSparseArrays/Compat.toml
+++ b/B/BlockSparseArrays/Compat.toml
@@ -27,11 +27,14 @@ GPUArraysCore = "0.1 - 0.2"
 ["0.2.11 - 0"]
 SparseArraysBase = "0.2.10 - 0.2"
 
-["0.2.2 - 0"]
-TypeParameterAccessors = "0.2"
+["0.2.15 - 0"]
+TypeParameterAccessors = "0.2 - 0.3"
 
 ["0.2.2 - 0.2.10"]
 SparseArraysBase = "0.2.2 - 0.2"
+
+["0.2.2 - 0.2.14"]
+TypeParameterAccessors = "0.2"
 
 ["0.2.3 - 0"]
 MapBroadcast = "0.1.5 - 0.1"
