--- a/N/NamedDimsArrays/Compat.toml
+++ b/N/NamedDimsArrays/Compat.toml
@@ -13,11 +13,13 @@ TypeParameterAccessors = "0.1"
 
 ["0.2 - 0"]
 SimpleTraits = "0.9.4 - 0.9"
-TypeParameterAccessors = "0.2"
 
 ["0.2 - 0.3.3"]
 BroadcastMapConversion = "0.1.2 - 0.1"
 Derive = "0.3.6 - 0.3"
+
+["0.2 - 0.4.2"]
+TypeParameterAccessors = "0.2"
 
 ["0.3 - 0"]
 ArrayLayouts = "1.11.0 - 1"
@@ -31,3 +33,6 @@ MapBroadcast = "0.1.5 - 0.1"
 ["0.3.6 - 0"]
 FillArrays = "1.13.0 - 1"
 MapBroadcast = "0.1.6 - 0.1"
+
+["0.4.3 - 0"]
+TypeParameterAccessors = "0.2 - 0.3"
