New version: BlockSparseArrays v0.2.16
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: 8383ba2e087a7f687e1c461b1b1924417a8c3934

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -45,3 +45,6 @@ git-tree-sha1 = "b5bc6fa01fa5afb7d7886559544cc2c15e5abd4d"
 
 ["0.2.15"]
 git-tree-sha1 = "fa3b838840275e3504b5f272fb438f7d76389a82"
+
+["0.2.16"]
+git-tree-sha1 = "8383ba2e087a7f687e1c461b1b1924417a8c3934"
