New version: QuantumOperatorDefinitions v0.1.7
UUID: 826dd319-6fd5-459a-a990-3a4f214664bf
Repo:
Tree: 30fb435a7cf2b6acc02b107684478db84d221634

--- a/Q/QuantumOperatorDefinitions/Versions.toml
+++ b/Q/QuantumOperatorDefinitions/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "72b5fb4e7a07235c96899bf490d078815092e9b4"
 
 ["0.1.6"]
 git-tree-sha1 = "8abe005fd4d9b6575f898694e258cad098b6fc15"
+
+["0.1.7"]
+git-tree-sha1 = "30fb435a7cf2b6acc02b107684478db84d221634"
