New version: GradedUnitRanges v0.1.6
UUID: e2de450a-8a67-46c7-b59c-01d5a3d041c5
Repo:
Tree: 58485a691e8f8d79cc53f8b77f60047926e061fe

--- a/G/GradedUnitRanges/Versions.toml
+++ b/G/GradedUnitRanges/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "75a8da51ed00e4e5924568eddaf8a7e9e985165b"
 
 ["0.1.5"]
 git-tree-sha1 = "3ee18bd98d1d05c7eb2917bf345f42b133df44b6"
+
+["0.1.6"]
+git-tree-sha1 = "58485a691e8f8d79cc53f8b77f60047926e061fe"
