--- a/S/SymmetrySectors/Versions.toml
+++ b/S/SymmetrySectors/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "e15b1202195a6dc83e9de37c99504f1fab0025ee"
 
 ["0.1.3"]
 git-tree-sha1 = "0dd1adee246747bec9f89f6b7c2b40a3340c7214"
+
+["0.1.4"]
+git-tree-sha1 = "c00eb7db87d90488b555c3dfd20a0499909ec977"
