--- a/I/ITensorPkgSkeleton/Versions.toml
+++ b/I/ITensorPkgSkeleton/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "953270cbd5e2d4ef15a138ae584007bc77a852bf"
 
 ["0.2.4"]
 git-tree-sha1 = "9e74dbd9a59cb3f3346d7d177fbcbeec87c5982a"
+
+["0.2.5"]
+git-tree-sha1 = "4c154690c02cfe917b034ffaa7b787ec26050974"
