--- a/Registry.toml
+++ b/Registry.toml
@@ -5,6 +5,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 
 [packages]
 0d5efcca-f356-4864-8770-e1ed8d78f208 = { name = "SparseArraysBase", path = "S/SparseArraysBase" }
+1dc1fb26-a137-4954-ae60-1bd4106e95ad = { name = "ITensorInfiniteMPS", path = "I/ITensorInfiniteMPS" }
 2c2a8ec4-3cfc-4276-aa3e-1307b4294e58 = { name = "NestedPermutedDimsArrays", path = "N/NestedPermutedDimsArrays" }
 2c9a651f-6452-4ace-a6ac-809f4280fbb4 = { name = "BlockSparseArrays", path = "B/BlockSparseArrays" }
 3ce3220d-c6cb-4fcd-b3c1-56d9c50edbe5 = { name = "NewPkg", path = "N/NewPkg" }
