--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -51,3 +51,6 @@ git-tree-sha1 = "8383ba2e087a7f687e1c461b1b1924417a8c3934"
 
 ["0.2.17"]
 git-tree-sha1 = "30d478e9fbc7b9de371f1415cf547dd41ea8b51d"
+
+["0.2.18"]
+git-tree-sha1 = "c1694aa9f35f9c3ffc4c6369fb3651e58f87a7b0"
