New version: SymmetrySectors v0.1.5
UUID: f8a8ad64-adbc-4fce-92f7-ffe2bb36a86e
Repo:
Tree: 2957e8692083f37d89ffbb2bad034f157f5b88dd

--- a/S/SymmetrySectors/Versions.toml
+++ b/S/SymmetrySectors/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "0dd1adee246747bec9f89f6b7c2b40a3340c7214"
 
 ["0.1.4"]
 git-tree-sha1 = "c00eb7db87d90488b555c3dfd20a0499909ec977"
+
+["0.1.5"]
+git-tree-sha1 = "2957e8692083f37d89ffbb2bad034f157f5b88dd"
