New version: ITensorPkgSkeleton v0.3.0
UUID: 3d388ab1-018a-49f4-ae50-18094d5f71ea
Repo:
Tree: 073ded9ab6e28cc637359f7ec098e43c2d971d17

--- a/I/ITensorPkgSkeleton/Versions.toml
+++ b/I/ITensorPkgSkeleton/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "9e74dbd9a59cb3f3346d7d177fbcbeec87c5982a"
 
 ["0.2.5"]
 git-tree-sha1 = "4c154690c02cfe917b034ffaa7b787ec26050974"
+
+["0.3.0"]
+git-tree-sha1 = "073ded9ab6e28cc637359f7ec098e43c2d971d17"
