New version: BlockSparseArrays v0.2.19
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: faac75d9c57a74d39dd434f1649649db0833d0ca

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "30d478e9fbc7b9de371f1415cf547dd41ea8b51d"
 
 ["0.2.18"]
 git-tree-sha1 = "c1694aa9f35f9c3ffc4c6369fb3651e58f87a7b0"
+
+["0.2.19"]
+git-tree-sha1 = "faac75d9c57a74d39dd434f1649649db0833d0ca"
