New version: ITensorInfiniteMPS v0.2.0
UUID: 1dc1fb26-a137-4954-ae60-1bd4106e95ad
Repo:
Tree: 172c1c855557752f7e27b483edeb033a9ad6aac9

--- a/I/ITensorInfiniteMPS/Versions.toml
+++ b/I/ITensorInfiniteMPS/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "40642457ee88d2f212774e21f59b77be56f09769"
+
+["0.2.0"]
+git-tree-sha1 = "172c1c855557752f7e27b483edeb033a9ad6aac9"
