--- a/Registry.toml
+++ b/Registry.toml
@@ -17,6 +17,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 60cbd0c0-df58-4cb7-918c-6f5607b73fde = { name = "NamedDimsArrays", path = "N/NamedDimsArrays" }
 680c2d7c-f67a-4cc9-ae9c-da132b1447a5 = { name = "BackendSelection", path = "B/BackendSelection" }
 68bd88dc-f39d-4e12-b2ca-f046b68fcc6a = { name = "TensorAlgebra", path = "T/TensorAlgebra" }
+6b6dea30-58b3-414c-b7c7-5c6ea5923b3e = { name = "ITensorCorrelators", path = "I/ITensorCorrelators" }
 6c5e35bf-e59e-4898-b73c-732dcc4ba65f = { name = "DerivableInterfaces", path = "D/DerivableInterfaces" }
 74fd4be6-21e2-4f6f-823a-4360d37c7a77 = { name = "DiagonalArrays", path = "D/DiagonalArrays" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
