--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "aec8536ba79cdc058f53e1d5974ca1beb35bb359"
 
 ["0.1.10"]
 git-tree-sha1 = "e1b22c923ea187b879f3da2bcb2ab9375c657cd4"
+
+["0.2.0"]
+git-tree-sha1 = "dde583eb741e19243a9aeb81d0586804ffdb7fe2"
