--- a/D/DerivableInterfaces/Compat.toml
+++ b/D/DerivableInterfaces/Compat.toml
@@ -12,3 +12,6 @@ TypeParameterAccessors = "0.2"
 
 ["0.3.15 - 0"]
 TypeParameterAccessors = "0.2 - 0.3"
+
+["0.4 - 0"]
+Compat = ["3.47.0 - 3", "4.10.0 - 4"]
