--- a/D/DerivableInterfaces/Versions.toml
+++ b/D/DerivableInterfaces/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "ea345d5e35468f71c18ecd63b9cd1697e74a73ae"
 
 ["0.3.17"]
 git-tree-sha1 = "6727fb2ee6a2f00c545a457abbd23f577862cfc2"
+
+["0.4.0"]
+git-tree-sha1 = "0a75ff4572c243dcea6faf93628e124c1f45f60b"
