[create-pull-request] automated change

--- a/I/ITensorPkgSkeleton/Versions.toml
+++ b/I/ITensorPkgSkeleton/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "b61e148ecfc029aad389700a828428e0212298ca"
 
 ["0.3.7"]
 git-tree-sha1 = "1dce75722e6a50bff1d2d40e7386cdb686a4c456"
+
+["0.3.8"]
+git-tree-sha1 = "812b4f56b8d036c4f8cf214fa2a9f839d9fe2701"
