New version: TensorProducts v0.1.1
UUID: decf83d6-1968-43f4-96dc-fdb3fe15fc6d
Repo:
Tree: 7b846ca14f4025c561b46c88ee80863bc0703bdb

--- a/T/TensorProducts/Versions.toml
+++ b/T/TensorProducts/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "7f48f8cc5605b8cb8cbf919c48f4e81e13a018f9"
+
+["0.1.1"]
+git-tree-sha1 = "7b846ca14f4025c561b46c88ee80863bc0703bdb"
