--- a/I/ITensorCorrelators/Versions.toml
+++ b/I/ITensorCorrelators/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "38dd4fa40ccc159ea7e6ac492e4c22e7aa1e2a34"
+
+["0.1.1"]
+git-tree-sha1 = "acc28622a40b2acbd67b8c7495f88aad4bf1eabe"
