--- a/T/TensorProducts/Versions.toml
+++ b/T/TensorProducts/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "7f48f8cc5605b8cb8cbf919c48f4e81e13a018f9"
 
 ["0.1.1"]
 git-tree-sha1 = "7b846ca14f4025c561b46c88ee80863bc0703bdb"
+
+["0.1.2"]
+git-tree-sha1 = "7cdc35995c676b22ed6b7749c346730b50d639df"
