New version: TensorProducts v0.1.3
UUID: decf83d6-1968-43f4-96dc-fdb3fe15fc6d
Repo:
Tree: 85e27933fc0710a40e815ab9aac6bcaa29a8a2a6

--- a/T/TensorProducts/Versions.toml
+++ b/T/TensorProducts/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "7b846ca14f4025c561b46c88ee80863bc0703bdb"
 
 ["0.1.2"]
 git-tree-sha1 = "7cdc35995c676b22ed6b7749c346730b50d639df"
+
+["0.1.3"]
+git-tree-sha1 = "85e27933fc0710a40e815ab9aac6bcaa29a8a2a6"
