New version: FusionTensors v0.2.3
UUID: e16ca583-1f51-4df0-8e12-57d32947d33e
Repo:
Tree: f9ac41766e6541bfaa0f97c42de27a2d7dc96ce5

--- a/F/FusionTensors/Versions.toml
+++ b/F/FusionTensors/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.1"]
 git-tree-sha1 = "147c4968d0e385efdf3c913dbec65552d85b6a33"
+
+["0.2.3"]
+git-tree-sha1 = "f9ac41766e6541bfaa0f97c42de27a2d7dc96ce5"
