--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -122,3 +122,6 @@ git-tree-sha1 = "bcf277ae90666e027e8955af34f1521de1a76670"
 
 ["0.2.12"]
 git-tree-sha1 = "137681fea7318ea2818834e3ca1426919a83322e"
+
+["0.2.13"]
+git-tree-sha1 = "ae612555434e5cba755e63deb57f2be9933266bd"
