New version: SerializedArrays v0.2.3
UUID: 621c0da3-e96e-4f80-bd06-5ae31cdfcb39
Repo:
Tree: 4efcea9bbcbb9eda9f64858d9bec77316d40f054

--- a/S/SerializedArrays/Versions.toml
+++ b/S/SerializedArrays/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "18d8ac89d2cd78b41410adf57e9e542a1d670e24"
 
 ["0.2.2"]
 git-tree-sha1 = "2dd9a7f7bc94cd11e0b45bbd2a883752528b3606"
+
+["0.2.3"]
+git-tree-sha1 = "4efcea9bbcbb9eda9f64858d9bec77316d40f054"
