--- a/A/AlgorithmsInterface/Package.toml
+++ b/A/AlgorithmsInterface/Package.toml
@@ -1,3 +1,3 @@
 name = "AlgorithmsInterface"
 uuid = "d1e3940c-cd12-4505-8585-b0a4b322527d"
-repo = "git@github.com:ITensor/AlgorithmsInterface.jl.git"
+repo = "https://github.com/ITensor/AlgorithmsInterface.jl.git"
