--- a/Registry.toml
+++ b/Registry.toml
@@ -26,6 +26,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 6c5e35bf-e59e-4898-b73c-732dcc4ba65f = { name = "DerivableInterfaces", path = "D/DerivableInterfaces" }
 6ca31247-5036-4cc6-95db-9b8b909db17f = { name = "GradedArraysNext", path = "G/GradedArraysNext" }
 74fd4be6-21e2-4f6f-823a-4360d37c7a77 = { name = "DiagonalArrays", path = "D/DiagonalArrays" }
+7c7cc465-9c6a-495f-bdd1-f42428e86d0c = { name = "FunctionImplementations", path = "F/FunctionImplementations" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
 826dd319-6fd5-459a-a990-3a4f214664bf = { name = "QuantumOperatorDefinitions", path = "Q/QuantumOperatorDefinitions" }
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
