--- a/Registry.toml
+++ b/Registry.toml
@@ -31,6 +31,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
 826dd319-6fd5-459a-a990-3a4f214664bf = { name = "QuantumOperatorDefinitions", path = "Q/QuantumOperatorDefinitions" }
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
+a374f348-d733-473a-88bc-8a13261ed0c1 = { name = "MassApplyPatch", path = "M/MassApplyPatch" }
 ae191fcf-7ec6-40a6-95c9-dedb80b28f91 = { name = "PkgDependents", path = "P/PkgDependents" }
 b6bf39f1-c9d3-4bad-aad8-593d802f65fd = { name = "ITensorFormatter", path = "I/ITensorFormatter" }
 bc96ca6e-b7c8-4bb6-888e-c93f838762c2 = { name = "GradedArrays", path = "G/GradedArrays" }
