--- a/.github/workflows/registry-consistency-ci.yml
+++ b/.github/workflows/registry-consistency-ci.yml
@@ -2,10 +2,10 @@ name: Registry Consistency
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 env:
     JULIA_PKG_USE_CLI_GIT: true
