--- a/.github/workflows/registry-consistency-ci.yml
+++ b/.github/workflows/registry-consistency-ci.yml
@@ -1,4 +1,5 @@
 name: Registry Consistency
+
 on:
   pull_request:
     branches:
@@ -7,10 +8,19 @@ on:
     branches:
       - main
   workflow_dispatch:
+
 env:
     JULIA_PKG_USE_CLI_GIT: true
+
 permissions:
   contents: read
+
+concurrency:
+  # Skip intermediate builds: always.
+  # Cancel intermediate builds: only pull request builds
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+
 jobs:
   check:
     runs-on: ${{ matrix.os }}
@@ -19,57 +29,46 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          # Keep this list in sync with `update_manifests.yml`.
-          # - '1.0' # RegistryCI currently doesn't support Julia 1.0
-          # - '1.1' # RegistryCI currently doesn't support Julia 1.1
-          # - '1.2' # RegistryCI currently doesn't support Julia 1.2
+          # - '1.0' # RegistryCI currently doesn't support Julia 1.0 # TODO: Uncomment this line
+          # - '1.1' # RegistryCI currently doesn't support Julia 1.1 # TODO: Uncomment this line
+          # - '1.2' # RegistryCI currently doesn't support Julia 1.2 # TODO: Uncomment this line
           - '1.3'
-          - '1.4'
-          - '1.5'
+          # We intentionally skip the following: 1.4, 1.5, 1.7
+          # But we include those when we run the once-daily cron job.
           - '1.6'
-          - '1.7'
           - '1.8'
           - '1.9'
           - '1.10'
-          # - '1.11' # TODO: uncomment once Julia 1.11 is released
+          - '1.11'
+          - '1.12'
+          # - '1.13' # Uncomment this once Julia 1.13 is released
           # - 'nightly' # TODO: uncomment this line
         os:
           - ubuntu-latest
         arch:
           - x64
     steps:
-      - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v3.3.0
-      - uses: julia-actions/setup-julia@f2258781c657ad9b4b88072c5eeaf9ec8c370874 # v2.0.0
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: julia-actions/setup-julia@5c9647d97b78a5debe5164e9eec09d653d29bd71 # v2.6.1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+      - name: Cache artifacts and packages
+        uses: julia-actions/cache@d10a6fd8f31b12404a54613ebad242900567f2b9 # v2.1.0
       - run: write(ENV["GITHUB_OUTPUT"], "manifest_version=$(VERSION.major).$(VERSION.minor)")
         shell: julia --color=yes --project=.ci/ {0}
         id: manifest_version
-      - run: echo "The manifest is .ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml"
+      - run: echo "The manifest is .ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml"
       - run: rm -rf .ci/Manifest.toml
-      - run: mv .ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml .ci/Manifest.toml
+      - run: mv .ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml .ci/Manifest.toml
       - run: rm -rf .ci/Manifest.*.toml
       - run: chmod 400 .ci/Project.toml
       - run: chmod 400 .ci/Manifest.toml
         if: ${{ matrix.version != 'nightly' }}
-      - name: Cache artifacts and packages
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: |
-            ~/.julia/artifacts
-            ~/.julia/packages
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/.ci/Manifest.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
       - run: julia --color=yes -e 'import Pkg; Pkg.Registry.add("General")'
         env:
           JULIA_PKG_SERVER: ""
       - run: julia --color=yes -e 'import Pkg; Pkg.Registry.update()'
-      - run: .ci/instantiate.sh
+      - run: .ci/instantiate.sh .ci/
       - run: julia --color=yes --project=.ci/ -e 'import Pkg; Pkg.precompile()'
-      - run: julia --color=yes --project=.ci/ -e 'import RegistryCI; RegistryCI.test(registry_deps=["General"])'
+      - run: julia --project=.ci/ --color=yes -e 'import RegistryCI; RegistryCI.test(registry_deps=["General"])'
