--- a/.github/workflows/update_manifests.yml
+++ b/.github/workflows/update_manifests.yml
@@ -14,14 +14,17 @@ defaults:
   run:
     shell: bash
 jobs:
-  update_each_manifest:
+  update_each_ci_manifest:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
         version:
-          # Keep this list in sync with `ci.yml`.
+          # Keep this list in sync with both `registry-consistency-ci{,-cron}.yml` and `registry-consistency-ci-cron.yml`.
+          # - '1.0' # RegistryCI currently doesn't support Julia 1.0 # TODO: Uncomment this line
+          # - '1.1' # RegistryCI currently doesn't support Julia 1.1 # TODO: Uncomment this line
+          # - '1.2' # RegistryCI currently doesn't support Julia 1.2 # TODO: Uncomment this line
           - '1.3'
           - '1.4'
           - '1.5'
@@ -30,41 +33,35 @@ jobs:
           - '1.8'
           - '1.9'
           - '1.10'
-          - 'nightly'
+          - '1.11'
+          - '1.12'
+          # - '1.13' # Uncomment this once Julia 1.13 is released
+          # - 'nightly' # TODO: uncomment this line
     steps:
-      - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v3.3.0
-      - uses: julia-actions/setup-julia@f2258781c657ad9b4b88072c5eeaf9ec8c370874 # v2.0.0
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: julia-actions/setup-julia@5c9647d97b78a5debe5164e9eec09d653d29bd71 # v2.6.1
         with:
           version: ${{ matrix.version }}
           arch: x64
+      - name: Cache artifacts
+        uses: julia-actions/cache@d10a6fd8f31b12404a54613ebad242900567f2b9 # v2.1.0
       - run: write(ENV["GITHUB_OUTPUT"], "manifest_version=$(VERSION.major).$(VERSION.minor)")
         shell: julia --color=yes {0}
         id: manifest_version
-      - run: echo "We will update the manifest at .ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml"
+      - run: echo "We will update the manifest at .ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml"
       - run: rm -rf .ci/Manifest.toml
       - run: |
-          if [ -f ".ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml" ]; then
+          if [ -f ".ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml" ]; then
               echo "The manifest file exists, so I will update the existing manifest."
-              mv .ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml .ci/Manifest.toml
+              mv .ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml .ci/Manifest.toml
           else
               echo "The manifest file does not exist, so I will create a new manifest from scratch."
           fi
-      - name: Cache artifacts
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/.ci/Manifest.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
       - run: julia --color=yes -e 'import Pkg; Pkg.Registry.add("General")'
         env:
           JULIA_PKG_SERVER: ""
       - run: julia --color=yes -e 'import Pkg; Pkg.Registry.update()'
-      - run: .ci/instantiate.sh
+      - run: .ci/instantiate.sh .ci/
       - run: julia --color=yes --project=.ci/ -e 'import Pkg; Pkg.update()'
       - run: |
           if Base.VERSION >= v"1.6"
@@ -75,34 +72,79 @@ jobs:
               end
           end
         shell: julia --color=yes {0}
-      - run: mv .ci/Manifest.toml .ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml
+      - run: mv .ci/Manifest.toml .ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml
       - run: git status
-      - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
+      - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: manifest_file_for_${{ steps.manifest_version.outputs.manifest_version }}
-          path: .ci/Manifest.${{ steps.manifest_version.outputs.manifest_version }}.toml
+          path: .ci/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml
+          if-no-files-found: error
+  update_automerge_manifest:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - '1.12'
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: julia-actions/setup-julia@5c9647d97b78a5debe5164e9eec09d653d29bd71 # v2.6.1
+        with:
+          version: ${{ matrix.version }}
+          arch: x64
+      - name: Cache artifacts
+        uses: julia-actions/cache@d10a6fd8f31b12404a54613ebad242900567f2b9 # v2.1.0
+      - run: write(ENV["GITHUB_OUTPUT"], "manifest_version=$(VERSION.major).$(VERSION.minor)")
+        shell: julia --color=yes {0}
+        id: manifest_version
+      - run: echo "We will update the manifest at .ci/AutoMerge/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml"
+      - run: rm -rf .ci/AutoMerge/Manifest.toml
+      - run: |
+          if [ -f ".ci/AutoMerge/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml" ]; then
+              echo "The manifest file exists, so I will update the existing manifest."
+              mv .ci/AutoMerge/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml .ci/AutoMerge/Manifest.toml
+          else
+              echo "The manifest file does not exist, so I will create a new manifest from scratch."
+          fi
+      - run: julia --color=yes -e 'import Pkg; Pkg.Registry.add("General")'
+        env:
+          JULIA_PKG_SERVER: ""
+      - run: julia --color=yes -e 'import Pkg; Pkg.Registry.update()'
+      - run: .ci/instantiate.sh .ci/AutoMerge/
+      - run: julia --color=yes --project=.ci/AutoMerge/ -e 'import Pkg; Pkg.update()'
+      - run: mv .ci/AutoMerge/Manifest.toml .ci/AutoMerge/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml
+      - run: git status
+      - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: automerge_manifest_file_for_${{ steps.manifest_version.outputs.manifest_version }}
+          path: .ci/AutoMerge/Manifest-v${{ steps.manifest_version.outputs.manifest_version }}.toml
           if-no-files-found: error
   make_single_pr:
-    needs: update_each_manifest
+    needs: [update_each_ci_manifest, update_automerge_manifest]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
       fail-fast: false
     steps:
-      - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
       - run: rm -rf /tmp/manifest_updater
       - run: mkdir /tmp/manifest_updater
       - run: chmod 700 /tmp/manifest_updater
-      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
+      - uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           path: /tmp/manifest_updater/download_artifacts
-      - run: mv /tmp/manifest_updater/download_artifacts/manifest_file_for_*/Manifest.*.toml .ci
+      - run: mv /tmp/manifest_updater/download_artifacts/manifest_file_for_*/Manifest-v*.toml .ci
+      - run: mv /tmp/manifest_updater/download_artifacts/automerge_manifest_file_for_*/Manifest-v*.toml .ci/AutoMerge
       - run: rm -rf /tmp/manifest_updater
       - run: rm -rf .ci/Manifest.toml
+      - run: rm -rf .ci/AutoMerge/Manifest.toml
       - run: chmod 600 .ci/Project.toml
-      - run: chmod 600 .ci/Manifest.*.toml
+      - run: chmod 600 .ci/Manifest-*.toml
+      - run: chmod 600 .ci/AutoMerge/Project.toml
+      - run: chmod 600 .ci/AutoMerge/Manifest-*.toml
       - run: git status
-      - uses: peter-evans/create-pull-request@6d6857d36972b65feb161a90e484f2984215f83e # v6.0.5
+      - uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0 # v8.1.0
         with:
           token: ${{ secrets.TAGBOT_TOKEN }}
           delete-branch: true
