--- a/.github/automerge.yml
+++ b/.github/automerge.yml
@@ -1,7 +1,9 @@
-name: Auto-merge my registrator PRs after 10 minutes
+# .github/workflows/automerge-minimal.yml
+name: Auto-merge "New version" PRs (minimal)
 
 on:
   schedule:
+    # GitHub’s shortest schedule interval is 5 minutes.
     - cron: "*/5 * * * *"
   workflow_dispatch:
 
@@ -9,83 +11,104 @@ permissions:
   contents: write
   pull-requests: write
 
-concurrency:
-  group: automerge-my-prs
-  cancel-in-progress: false
-
 jobs:
-  merge:
+  automerge:
     runs-on: ubuntu-latest
     steps:
       - name: Merge eligible PRs
         env:
           GH_TOKEN: ${{ github.token }}
           REPO: ${{ github.repository }}
-          AUTHOR: mtfishman
-          HEAD_PREFIX: registrator/
+
+          # --- policy knobs ---
           MIN_AGE_MINUTES: "10"
-          MERGE_METHOD: squash   # squash | merge | rebase
-          USE_AUTO: "false"      # set true to use gh --auto (see note below)
+          ALLOWED_AUTHORS: "mtfishman" # comma-separated; leave empty to allow anyone
+          HEAD_PREFIX: "registrator/"  # optional extra guard; set "" to disable
+
+          # Match titles like: "New version: SparseArraysBase v0.9.7"
+          TITLE_REGEX: '^New version:\s+.+\sv[0-9]'
+
+          # Match initial author comment like: "Commit: <sha>"
+          COMMIT_REGEX: '^Commit:\s*[0-9a-f]{7,40}\s*$'
+
+          # merge | squash | rebase
+          MERGE_METHOD: "squash"
         run: |
           set -euo pipefail
 
-          prs_json="$(gh pr list -R "$REPO" \
-            --state open \
-            --author "$AUTHOR" \
-            --limit 100 \
-            --json number,createdAt,headRefName,baseRefName,isDraft,mergeable)"
+          python - <<'PY'
+          import json, os, re, subprocess
+          from datetime import datetime, timezone, timedelta
 
-          export PRS_JSON="$prs_json"
+          repo = os.environ["REPO"]
+          allowed_authors = {a.strip() for a in os.environ.get("ALLOWED_AUTHORS","").split(",") if a.strip()}
+          min_age = timedelta(minutes=int(os.environ.get("MIN_AGE_MINUTES","10")))
+          title_re = re.compile(os.environ["TITLE_REGEX"])
+          commit_re = re.compile(os.environ["COMMIT_REGEX"], re.MULTILINE)
+          head_prefix = os.environ.get("HEAD_PREFIX","")
+          merge_method = os.environ.get("MERGE_METHOD","squash")
 
-          pr_numbers="$(python - <<'PY'
-          import os, json, datetime
-          from datetime import timezone
+          def gh_json(cmd):
+              out = subprocess.check_output(cmd, text=True)
+              return json.loads(out) if out.strip() else None
 
-          prs = json.loads(os.environ["PRS_JSON"])
-          prefix = os.environ["HEAD_PREFIX"]
-          min_age = int(os.environ["MIN_AGE_MINUTES"])
-          now = datetime.datetime.now(timezone.utc)
+          prs = gh_json([
+              "gh","pr","list","-R",repo,"--state","open","--limit","100",
+              "--json","number,title,createdAt,headRefName,baseRefName,isDraft,mergeable,author"
+          ]) or []
+
+          now = datetime.now(timezone.utc)
+          eligible = []
 
           for pr in prs:
               if pr.get("isDraft"):
                   continue
               if pr.get("baseRefName") != "main":
                   continue
-              if not pr.get("headRefName","").startswith(prefix):
+
+              author = (pr.get("author") or {}).get("login","")
+              if allowed_authors and author not in allowed_authors:
                   continue
-              created = datetime.datetime.fromisoformat(pr["createdAt"].replace("Z","+00:00"))
-              age_min = (now - created).total_seconds() / 60
-              if age_min < min_age:
+
+              if head_prefix and not (pr.get("headRefName") or "").startswith(head_prefix):
                   continue
+
+              title = pr.get("title") or ""
+              if not title_re.search(title):
+                  continue
+
+              created_at = datetime.fromisoformat(pr["createdAt"].replace("Z","+00:00"))
+              if now - created_at < min_age:
+                  continue
+
               if pr.get("mergeable") == "CONFLICTING":
                   continue
-              print(pr["number"])
+
+              n = pr["number"]
+              comments = gh_json(["gh","api",f"repos/{repo}/issues/{n}/comments?per_page=100"]) or []
+              author_comments = [c for c in comments if (c.get("user") or {}).get("login") == author]
+              if not author_comments:
+                  continue
+              author_comments.sort(key=lambda c: c.get("created_at") or "")
+              first_body = (author_comments[0].get("body") or "").strip()
+              if not commit_re.search(first_body):
+                  continue
+
+              eligible.append(n)
+
+          if not eligible:
+              print("No eligible PRs.")
+              raise SystemExit(0)
+
+          for n in eligible:
+              try:
+                  print(f"Merging PR #{n}...")
+                  subprocess.check_call([
+                      "gh","pr","merge","-R",repo,str(n),
+                      f"--{merge_method}",
+                      "--delete-branch"
+                  ])
+              except subprocess.CalledProcessError as e:
+                  print(f"Failed to merge PR #{n}: {e}")
+
           PY
-          )"
-
-          if [ -z "$pr_numbers" ]; then
-            echo "No eligible PRs."
-            exit 0
-          fi
-
-          case "$MERGE_METHOD" in
-            squash) method_flag="--squash" ;;
-            merge)  method_flag="--merge" ;;
-            rebase) method_flag="--rebase" ;;
-            *) echo "Unknown MERGE_METHOD=$MERGE_METHOD" >&2; exit 2 ;;
-          esac
-
-          auto_flag=""
-          if [ "$USE_AUTO" = "true" ]; then
-            auto_flag="--auto"
-          fi
-
-          for n in $pr_numbers; do
-            echo "Merging PR #$n"
-            gh pr merge -R "$REPO" "$n" \
-              $method_flag \
-              $auto_flag \
-              --delete-branch \
-              --subject "Auto-merge PR #$n" \
-              --body "Auto-merged after ${MIN_AGE_MINUTES} minutes."
-          done
