--- a/F/FileUtils/Package.toml
+++ b/F/FileUtils/Package.toml
@@ -1,3 +1,3 @@
 name = "FileUtils"
 uuid = "3ab64cf3-766e-4aaa-abdf-a104b28521f5"
-repo = "https://github.com/mtfishman/FileUtils.jl"
+repo = "https://github.com/ITensor/FileUtils.jl"
